2011-04-02  Dirk Eddelbuettel  <edd@debian.org>

	* inst/unitTests/testRcppModule/src/stdVector.cpp: Use #ifdef not #if

	* inst/include/Rcpp/module/Module_generated_ctor_signature.h: Add a
	bit of null-op code to suppress a 'unused parameter' warning in the
	initial (and non-templated) ctor_signature() function

2011-03-21  Dirk Eddelbuettel  <edd@debian.org>

	* inst/unitTests/testRcppModule/src/stdVector.cpp: Protect push_back
	declaration by #ifdef as it conflicts with -std=c++0x use for g++-4.5

2011-03-17  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/RcppCommon.h: Condition the typedef for 'long long'
	of rcpp_long_long_type on the (still experimental) support for C++0x
	which can be enabled with the non-portable g++ flag '-std=c++0x';
	adding a test for C++0x support suppresses a new warning with g++ about
	long long being part of C++98; thanks to Kurt Hornik for raising this

2011-03-10  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/grow.h: Applied another patch kindly supplied by
	Murray which fixes another clang/llvm and C++ conformance issue by
	re-ordering declarations as unqualified names must be declared before
	they are used, even when used within templates.

2011-02-28  Dirk Eddelbuettel  <edd@debian.org>

	* inst/doc/Makefile: Call R and Rscript relative to R_HOME/bin

2011-02-23  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION: Release 0.9.2
        * inst/NEWS: Release 0.9.2
        * inst/include/Rcpp/config.h: Release 0.9.2
        * debian/*: Similarly updated for new release to Debian

        * inst/include/RcppCommon.h: Apply patch by Alexey Stukalov to enable
        basic Intel Compiler support without Cxx0x or TR1 features

        * inst/THANKS: Added some Thank You! to Baptiste, Alexey and Ken

        * inst/include/Rcpp/Module.h: Minor reworking of module loading
        macro to get rid of one g++ warning

2011-02-22  Dirk Eddelbuettel  <edd@debian.org>
