@@ -86,6 +86,10 @@ namespace Rcpp{
     #if GCC_VERSION >= 40500
         #define IS_GCC_450_OR_LATER
     #endif
+    // g++ 4.6 no longer has exception_defines.h so need a flag for that
+    #if GCC_VERSION < 40600
+        #define IS_EARLIER_THAN_GCC_460
+    #endif
 #endif
 
 #ifdef __INTEL_COMPILER
