@@ -1,13 +1,16 @@
 0.9.3   2011-xx-yy
 
-    o   inst/doc/Makefile now respects $R_HOME environment variable
+    o   Exceptions code include exception_defines.h only when g++ is 4.5 or
+        younger as the file no longer exists with g++-4.6
+    
+    o   The inst/doc/Makefile now respects the $R_HOME environment variable
 
-    o   inst/include/Rcpp/grow.h: C++ conformance issue found by clang/llvm
-        addressed by re-ordering declarations as unqualified names must be
-        declared before they are used, even when used within templates
+    o   C++ conformance issue found by clang/llvm addressed by re-ordering
+        declarations in grow.h as unqualified names must be declared before
+        they are used, even when used within templates
 
-    o   inst/include/RcppCommon.h: The 'long long' typedef now depends on
-        C++0x being enabled as this was not a feature in C++98
+    o   The 'long long' typedef now depends on C++0x being enabled as this
+        was not a feature in C++98; this suppresses a new g++-4.5 warning
 
 0.9.2   2011-02-23
 
